Set table header overflow to auto, fix #6299

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -546,7 +546,7 @@
   }
 
   &-fixed-header &-scroll &-header {
-    overflow: scroll;
+    overflow: auto;
     padding-bottom: 20px;
     margin-bottom: -20px;
   }
